Fix OAuth2 login flow and session management